--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <version>1.18.26</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.4</version>
+        </dependency>
     </dependencies>
 
 </project>
